--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
+    "angular-calendar": "^0.26.3",
+    "angularfire2": "^5.1.0",
     "core-js": "^2.5.4",
+    "date-fns": "^1.29.0",
+    "firebase": "^5.5.5",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
